# shadow-browser-plugin

./: .gitignore  CMakeLists.txt  README.md
newweb/: CMakeLists.txt  DEV-NOTES.md  README.md  experiment_common.cpp  experiment_common.hpp
newweb/browser/: CMakeLists.txt  browser.cc  browser.hpp
newweb/browser/driver/: CMakeLists.txt  driver.cpp  driver.hpp  driver_renderer.cpp  driver_tproxy.cpp  main.cpp
newweb/browser/io_process/: CMakeLists.txt  http_session.cpp  http_session.hpp  io_process.cpp  ipc.cpp  ipc.hpp  net_config.hpp
newweb/browser/ioprocess/: CMakeLists.txt  IOProcess.cpp  ipc.cpp  ipc.hpp
newweb/browser/render_process/: CMakeLists.txt  interfaces.hpp  ipc.cpp  ipc.hpp  ipc_io_service.cpp  ipc_io_service.hpp  ipc_renderer.cpp  ipc_renderer.hpp  main.cpp  main.hpp  render_process.cpp
newweb/browser/render_process/webengine/: design.md  page_model.cpp  page_model.hpp  webengine.cpp  webengine.hpp
newweb/experiments/: common.py  process-result-v9.py  process_stats_shadow_json.py
newweb/experiments/100relays-500clients/: countrycode_to_webserver_names.json  run1.sh  run2.sh  run3.sh  run4.sh  run5.sh  shadow.config.xml  webclient_names.json
newweb/experiments/100relays-500clients/0-vanilla-100-buflo/: browser_proxy_mode_spec.txt
newweb/experiments/100relays-500clients/100-vanilla-0-buflo/: browser_proxy_mode_spec.txt
newweb/experiments/100relays-500clients/50-vanilla-50-buflo/: browser_proxy_mode_spec.txt
newweb/experiments/100relays-500clients/95-vanilla-5-buflo/: browser_proxy_mode_spec.txt
newweb/experiments/100relays-500clients/conf/: relay.choices.csv  tgen.server.graphml.xml  tgen.torbulkclient.graphml.xml  tgen.torperf1mclient.graphml.xml  tgen.torperf5mclient.graphml.xml  tgen.torwebclient.graphml.xml  tor.common.torrc
newweb/experiments/100relays-500clients/page_models/: alibaba-page_model-10152016.json  aws.amazon.com-page_model-10252016.json  baidu-page_model-10152016.json  bing-page_model-10252016.json  ebay_page_model-10142016.json  go.com-page_model-10252016.json  google.com-page_model-10152016.json  google.com-page_model-10252016.json  jd.com-page_model-10252016.json  page_models_list.txt  paypal.com-page_model-10252016.json  pixnet.net-page_model-10252016.json  www.alibaba.com-page_model-10252016.json  www.ettoday.net-page_model-10282016.json  www.linkedin.com-page_model-10282016.json  www.so.com-page_model-10252016.json  www.sogou.com-page_model-10252016.json  www.tudou.com-page_model-10252016.json  www.wellsfargo.com-page_model-10282016.json  www.youku.com-page_model-10252016.json
newweb/experiments/200relays-1000clients/: shadow.config.xml  webclient_names.json
newweb/experiments/200relays-1000clients/0-vanilla-100-buflo/: browser_proxy_mode_spec.txt
newweb/experiments/200relays-1000clients/100-vanilla-0-buflo/: browser_proxy_mode_spec.txt
newweb/experiments/200relays-1000clients/75-vanilla-25-buflo/: browser_proxy_mode_spec.txt
newweb/experiments/200relays-1000clients/95-vanilla-5-buflo/: browser_proxy_mode_spec.txt
newweb/experiments/200relays-1000clients/conf/: relay.choices.csv  tgen.torbulkclient.graphml.xml  tgen.torperf50kclient.graphml.xml  tor.authority.torrc  tor.common.torrc
newweb/experiments/200relays-1000clients/page_models/: baidu-page_model-10252016.json  bankofamerica-page_model-10252016.json  cnn-page_model-10252016.json  ebay-page_model-10142016.json  english.china.com-page_model-10252016.json  hao123.com-page_model-10252016.json  (+10 more)
newweb/experiments/300relays-1000clients/: countrycode_to_webserver_names.json  run1.sh  run3.sh  run4.sh  shadow.config.xml  webclient_names.json
newweb/experiments/issue10/: README.md  driver.conf  fake_error.patch  page_model.json  page_models_list.txt  shadow.config.xml  tproxy_csp.conf  tproxy_ssp.conf
newweb/experiments/issue17/: README.md  browser_proxy_mode_spec.txt  page_model.json  shadow.config.xml  tproxy_ssp.conf
newweb/experiments/issue18/: README.md  tproxy_csp.conf
newweb/experiments/issue19/: README.md  page_model.json  page_models_list.txt  shadow.config.xml
newweb/experiments/issue20/: README.md  localhost_page_model.json  page_models_list.txt  start_processes.sh
newweb/experiments/issue8/: README.md  ioservice.conf  shadow.config.xml
newweb/experiments/test_all_pages/: browser_proxy_mode_spec.txt  driver.conf  populate_page_models.sh  shadow.config.xml
newweb/tools/: assign-proxy-mode.py  generate.py  get-servers-from-country.py
newweb/transport_proxy/: CMakeLists.txt  README.md  common_inner_outer_handler.cpp  common_inner_outer_handler.hpp  ipc.cpp  ipc.hpp  main.cpp
newweb/transport_proxy/csp/: client_handler.cpp  client_handler.hpp  csp.cpp  csp.hpp
newweb/transport_proxy/ssp/: csp_handler.cpp  csp_handler.hpp  ssp.cpp  ssp.hpp  stream_handler.cpp  stream_handler.hpp
newweb/utility/: NestingLevelIncrementer.hpp  buflo_mux_channel.cpp  buflo_mux_channel.hpp  buflo_mux_channel_impl_spdy.cpp  buflo_mux_channel_impl_spdy.hpp  common.cc  common.hpp  connection.cc  connection.hpp  connection_manager.cc  connection_manager.hpp  easylogging++.h  generic_message_channel.cpp  generic_message_channel.hpp  json_stream_channel.cpp  json_stream_channel.hpp  logging.cpp  logging.hpp  object.cpp  object.hpp  request.cc  request.hpp  socks5_connector.cpp  socks5_connector.hpp  stream_channel.cpp  stream_channel.hpp  stream_server.hpp  tcp_channel.cpp  tcp_channel.hpp  tcp_server.cpp  tcp_server.hpp  timer.cpp  timer.hpp
newweb/utility/folly/: DelayedDestruction.h  DelayedDestructionBase.h  Preprocessor.h  ScopeGuard.h
newweb/utility/http/: connection.cc  connection.hpp  connection_manager.cc  connection_manager.hpp  request.cc  request.hpp
newweb/utility/ipc/: CMakeLists.txt  generic_ipc_channel.cpp  generic_ipc_channel.hpp  generic_ipc_server.hpp  io_service_ipc.cpp  io_service_ipc.hpp  io_service_messages_flatbuffers.fbs
newweb/utility/old/: json_stream_channel.cpp  logging.cpp  logging.hpp  myevent.cc  myevent.hpp  shd-html.hpp
newweb/webserver/: CMakeLists.txt  handler.cc  handler.hpp  webserver.cc  webserver.hpp
(+2203 files in other folders)
